removed databind from base module

--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -67,7 +67,7 @@
             app:indicatorColor="@color/colorPrimaryDark"
             app:indicatorSize="50dp"
             app:trackColor="@color/colorAccent"
-            app:trackCornerRadius="@dimen/radius_default"
+            app:trackCornerRadius="@dimen/radius_default_10dp"
             app:trackThickness="5dp" />
 
     </LinearLayout>
