--- a/base/src/main/res/layout/activity_error.xml
+++ b/base/src/main/res/layout/activity_error.xml
@@ -16,9 +16,9 @@
         android:id="@+id/title"
         style="@style/TextAppearance.MaterialComponents.Headline5"
         android:layout_centerInParent="true"
-        android:layout_margin="@dimen/margin_default"
+        android:layout_margin="@dimen/margin_default_10dp"
         android:gravity="center"
-        android:padding="@dimen/padding_default"
+        android:padding="@dimen/padding_default_16dp"
         android:textColor="@color/md_white"
         android:textStyle="bold"
         android:layout_width="match_parent"
@@ -28,9 +28,9 @@
 
     <TextView
         android:layout_below="@id/title"
-        android:layout_margin="@dimen/margin_default"
+        android:layout_margin="@dimen/margin_default_10dp"
         android:gravity="center"
-        android:padding="@dimen/padding_small"
+        android:padding="@dimen/padding_small_8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/white"
         android:layout_width="match_parent"
