--- a/base/src/main/res/layout/default_bottomsheet.xml
+++ b/base/src/main/res/layout/default_bottomsheet.xml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_default_10dp"
+    android:background="@drawable/stroke_filled_top"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_default_16dp">
 
+    <include layout="@layout/motiv_dots" />
 
-
-    <LinearLayout
-        android:layout_margin="@dimen/margin_default_10dp"
+    <TextView
+        android:id="@+id/titleTextview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/stroke_filled_top"
-        android:padding="@dimen/padding_default_16dp">
+        android:paddingVertical="@dimen/padding_small_8dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        android:textStyle="bold"
+        tools:text="Atenção" />
 
-        <include layout="@layout/motiv_dots" />
+    <TextView
+        android:id="@+id/messageTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/padding_default_16dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        tools:text="Deseja prosseguir com essa ação?" />
 
-        <TextView
-            android:paddingVertical="@dimen/padding_small_8dp"
-            android:id="@+id/titleTextview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            android:textStyle="bold"
-            tools:text="Atenção" />
-
-        <TextView
-            tools:text="Deseja prosseguir com essa ação?"
-            android:id="@+id/messageTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/padding_default_16dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-        <include
-            android:id="@+id/buttons_view"
-            layout="@layout/horizontal_buttons_layout" />
-    </LinearLayout>
-</layout>
+    <include
+        android:id="@+id/buttons_view"
+        layout="@layout/horizontal_buttons_layout" />
+</LinearLayout>
