--- a/base/src/main/res/layout/horizontal_buttons_layout.xml
+++ b/base/src/main/res/layout/horizontal_buttons_layout.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    tools:showIn="@layout/default_bottomsheet">
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/cancelButton"
+        style="@style/ButtonNegative"
+        android:text="cancelar"
+        app:strokeColor="?android:textColorHint"
+        app:strokeWidth="2dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/okButton"
+        style="@style/ButtonPositive"
+        android:text="confirmar" />
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:showIn="@layout/default_bottomsheet">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/cancelButton"
-            style="@style/ButtonNegative"
-            android:text="cancelar"
-            app:strokeColor="?android:textColorHint"
-            app:strokeWidth="2dp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/okButton"
-            style="@style/ButtonPositive"
-            android:text="confirmar" />
-
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
