--- a/base/src/main/res/layout/list_dialog_layout.xml
+++ b/base/src/main/res/layout/list_dialog_layout.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/stroke_filled"
+    android:orientation="vertical">
 
 
-    <LinearLayout
+    <include
+        layout="@layout/motiv_dots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/padding_default_16dp"
+        android:layout_marginVertical="@dimen/padding_small_8dp" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/stroke_filled"
-        android:orientation="vertical">
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/list_dialog_item_layout" />
 
-
-        <include
-            layout="@layout/motiv_dots"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_default_16dp"
-            android:layout_marginVertical="@dimen/padding_small_8dp" />
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/listRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/list_dialog_item_layout" />
-
-    </LinearLayout>
+</LinearLayout>
 
 
 
 
-</layout>
