--- a/base/src/main/res/layout/style_layout_view.xml
+++ b/base/src/main/res/layout/style_layout_view.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/fade_gradient_inversed">
 
-
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/quoteBack"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/fade_gradient_inversed">
-
-        <ImageView
-            android:id="@+id/quoteBack"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorAccent"
-            android:fitsSystemWindows="true"
-            android:scaleType="center"
-            tools:showIn="@layout/quotes_card" />
+        android:background="@color/colorAccent"
+        android:fitsSystemWindows="true"
+        android:scaleType="center"
+        tools:showIn="@layout/quotes_card" />
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.4"
-            android:background="@color/md_black" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.4"
+        android:background="@color/md_black" />
 
-        <ImageView
-            android:id="@+id/giphyLogo"
-            android:layout_width="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/giphy_mark" />
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/giphyLogo"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/giphy_mark" />
+</RelativeLayout>
 
-</layout>
