--- a/base/src/main/res/layout/title_layout.xml
+++ b/base/src/main/res/layout/title_layout.xml
@@ -1,43 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?android:colorBackground"
+    app:elevation="0dp"
+    app:layout_scrollFlags="scroll|enterAlways">
 
-    <data>
-
-    </data>
-
-    <com.google.android.material.appbar.AppBarLayout
+    <com.google.android.material.appbar.CollapsingToolbarLayout
+        android:id="@+id/collapseToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:colorBackground"
-        app:elevation="0dp"
-        app:layout_scrollFlags="scroll|enterAlways">
+        app:title=""
+        app:titleEnabled="false">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapseToolbar"
+        <TextView
+            android:id="@+id/collapseTitle"
+            style="@style/ToolbarTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:title=""
-            app:titleEnabled="false">
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="?android:actionBarSize"
+            android:animateLayoutChanges="true"
+            android:text="@string/app_name" />
 
-            <TextView
-                android:id="@+id/collapseTitle"
-                style="@style/ToolbarTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="?android:actionBarSize"
-                android:animateLayoutChanges="true"
-                android:text="@string/app_name" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:animateLayoutChanges="true"
+            android:elevation="0dp"
+            app:layout_collapseMode="parallax" />
+    </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:animateLayoutChanges="true"
-                android:elevation="0dp"
-                app:layout_collapseMode="parallax" />
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-</layout>
+</com.google.android.material.appbar.AppBarLayout>
