--- a/base/src/main/res/layout/user_item.xml
+++ b/base/src/main/res/layout/user_item.xml
@@ -1,35 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/userContainer"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:foreground="?attr/selectableItemBackground"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:padding="@dimen/padding_default_16dp">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profilepic"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:civ_border_color="?android:textColorPrimary"
+        app:civ_border_width="2dp"
+        tools:src="@drawable/ic_neptune" />
 
-    <LinearLayout
-        android:id="@+id/userContainer"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/username"
+        style="@style/TextAppearance.MaterialComponents.Subtitle2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:foreground="?attr/selectableItemBackground"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/padding_default_16dp">
+        android:layout_gravity="center"
+        android:padding="@dimen/padding_default_16dp"
+        android:textColor="?android:textColorPrimary"
+        tools:text="Caio Alves Ferreira" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profilepic"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            app:civ_border_color="?android:textColorPrimary"
-            app:civ_border_width="2dp"
-            tools:src="@drawable/ic_neptune" />
-
-        <TextView
-            style="@style/TextAppearance.MaterialComponents.Subtitle2"
-            android:id="@+id/username"
-            android:layout_gravity="center"
-            android:padding="@dimen/padding_default_16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="?android:textColorPrimary"
-            tools:text="Caio Alves Ferreira" />
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
