--- a/base/src/main/res/layout/user_picview.xml
+++ b/base/src/main/res/layout/user_picview.xml
@@ -1,24 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<de.hdodenhof.circleimageview.CircleImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-
-    </data>
-
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:visibility="gone"
-        android:layout_width="24dp"
-        android:id="@+id/userpic"
-        android:layout_height="24dp"
-        app:civ_border_color="?android:textColorPrimary"
-        app:civ_border_width="2dp"
-        tools:visibility="visible"
-        tools:src="@drawable/ic_neptune"
-        android:layout_marginStart="-8dp"
-        app:civ_circle_background_color="?android:textColorHint" />
-
-
-</layout>
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/userpic"
+    android:layout_width="24dp"
+    android:layout_height="24dp"
+    android:layout_marginStart="-8dp"
+    android:visibility="gone"
+    app:civ_border_color="?android:textColorPrimary"
+    app:civ_border_width="2dp"
+    app:civ_circle_background_color="?android:textColorHint"
+    tools:src="@drawable/ic_neptune"
+    tools:visibility="visible" />
