--- a/manager/src/main/res/layout/fragment_covers.xml
+++ b/manager/src/main/res/layout/fragment_covers.xml
@@ -33,7 +33,7 @@
                         android:id="@+id/searchview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/padding_default"
+                        android:layout_margin="@dimen/padding_default_16dp"
                         android:background="@drawable/round_stroke_filled"
                         android:focusedByDefault="true"
                         app:iconifiedByDefault="false"
@@ -43,13 +43,13 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/padding_default"
+                        android:layout_margin="@dimen/padding_default_16dp"
                         android:text="Planos de fundo"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:layout_marginHorizontal="@dimen/padding_default"
+                        android:layout_marginHorizontal="@dimen/padding_default_16dp"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:scaleType="fitCenter"
@@ -61,8 +61,8 @@
                         android:background="@color/transparent"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_marginHorizontal="@dimen/padding_default"
-                        app:gphCellPadding="@dimen/padding_small"
+                        android:layout_marginHorizontal="@dimen/padding_default_16dp"
+                        app:gphCellPadding="@dimen/padding_small_8dp"
                         app:gphDirection="horizontal"
                         app:gphShowCheckeredBackground="false"
                         app:gphSpanCount="2" />
