--- a/manager/src/main/res/layout/nav_header_main.xml
+++ b/manager/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="@dimen/padding_default">
+        android:padding="@dimen/padding_default_16dp">
 
         <include
             layout="@layout/motiv_dots"
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/jost"
-            android:paddingVertical="@dimen/padding_small"
+            android:paddingVertical="@dimen/padding_small_8dp"
             android:text="@string/app_name"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
